test_thermostat = executable('test_thermostat',
  sources: 'test_thermostat.cpp',
  dependencies: [gtest_dep, tyche_dep],
)
test('test_thermostat', test_thermostat)

test_cell = executable('test_cell',
  sources: 'test_cell.cpp',
  dependencies: [gtest_dep, tyche_dep],
)
test('test_cell', test_cell)
